--- a/Source/Tests/RangeIt.Tests/RangeIt.Tests.csproj
+++ b/Source/Tests/RangeIt.Tests/RangeIt.Tests.csproj
@@ -106,13 +106,19 @@
     <Compile Include="Iterators\Iterator%272_Tests.cs" />
     <Compile Include="Iterators\IteratorExtensions_Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Traits\CategoryAttribute.cs" />
     <Compile Include="Ranges\Range_Ints_Tests.cs" />
     <Compile Include="Ranges\Range_Iota_Tests.cs" />
+    <Compile Include="Traits\CategoryDiscoverer.cs" />
+    <Compile Include="Traits\DiscovererUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
+    </None>
+    <None Include="xunit.runner.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
   <ItemGroup>
