--- a/Source/Lib/RangeIt/RangeIt.csproj
+++ b/Source/Lib/RangeIt/RangeIt.csproj
@@ -80,8 +80,10 @@
     <Compile Include="Iterators\Iterator%272.cs" />
     <Compile Include="Iterators\IteratorExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Ranges\Range_Ints.cs" />
-    <Compile Include="Ranges\Range_Iota.cs" />
+    <Compile Include="Ranges\Range%271.cs" />
+    <Compile Include="Ranges\RangeStrategies\IRangeStrategy.cs" />
+    <Compile Include="Ranges\Extensions\Range_Ints.cs" />
+    <Compile Include="Ranges\Extensions\Range_Iota.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
