--- a/Source/Lib/RangeIt/RangeIt.csproj
+++ b/Source/Lib/RangeIt/RangeIt.csproj
@@ -81,8 +81,9 @@
     <Compile Include="Iterators\IteratorExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ranges\Range%271.cs" />
-    <Compile Include="Ranges\RangeStrategies\IntsStrategy.cs" />
-    <Compile Include="Ranges\RangeStrategies\IntsWithStepStrategy.cs" />
+    <Compile Include="Ranges\RangeStrategies\Ints\IntsStrategy.cs" />
+    <Compile Include="Ranges\RangeStrategies\Ints\IntsWithStepStrategy.cs" />
+    <Compile Include="Ranges\RangeStrategies\Iota\IotaIntsFromToStrategy.cs" />
     <Compile Include="Ranges\RangeStrategies\IRangeStrategy.cs" />
     <Compile Include="Ranges\Extensions\Range_Ints.cs" />
     <Compile Include="Ranges\Extensions\Range_Iota.cs" />
