--- a/Source/Lib/RangeIt/RangeIt.csproj
+++ b/Source/Lib/RangeIt/RangeIt.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Iterators\Iterator%272.cs" />
     <Compile Include="Iterators\IteratorExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Ranges\Extensions\Range_Operations.cs" />
     <Compile Include="Ranges\Range%271.cs" />
     <Compile Include="Ranges\RangeStrategies\Ints\IntsStrategy.cs" />
     <Compile Include="Ranges\RangeStrategies\Ints\IntsWithStepStrategy.cs" />
@@ -96,6 +97,8 @@
     <Compile Include="Ranges\RangeStrategies\IRangeStrategy.cs" />
     <Compile Include="Ranges\Extensions\Range_Ints.cs" />
     <Compile Include="Ranges\Extensions\Range_Iota.cs" />
+    <Compile Include="Ranges\RangeStrategies\RangeFilter.cs" />
+    <Compile Include="Ranges\RangeStrategies\RangeTransform.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
