Add implementations for default functions

--- a/Source/Lib/RangeIt/RangeIt.csproj
+++ b/Source/Lib/RangeIt/RangeIt.csproj
@@ -80,25 +80,31 @@
     <Compile Include="Iterators\Iterator%272.cs" />
     <Compile Include="Iterators\IteratorExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Ranges\Extensions\Range_Functions.cs" />
+    <Compile Include="Ranges\Numeric\CalculatorBase%271.cs" />
+    <Compile Include="Ranges\Numeric\DoubleCalculator.cs" />
+    <Compile Include="Ranges\Numeric\FloatCalculator.cs" />
+    <Compile Include="Ranges\Numeric\IntCalculator.cs" />
     <Compile Include="Ranges\Extensions\Range_Operations.cs" />
+    <Compile Include="Ranges\Numeric\Number.cs" />
     <Compile Include="Ranges\Range%271.cs" />
     <Compile Include="Ranges\RangeStrategies\Ints\IntsStrategy.cs" />
     <Compile Include="Ranges\RangeStrategies\Ints\IntsWithStepStrategy.cs" />
-    <Compile Include="Ranges\RangeStrategies\Iota\AIotaCancelableGeneratorStrategy.cs" />
-    <Compile Include="Ranges\RangeStrategies\Iota\AIotaGeneratorStrategy.cs" />
-    <Compile Include="Ranges\RangeStrategies\Iota\IotaCancelableGeneratorStrategy.cs" />
-    <Compile Include="Ranges\RangeStrategies\Iota\IotaCancelableSimpleGeneratorStrategy.cs" />
-    <Compile Include="Ranges\RangeStrategies\Iota\IotaGeneratorStrategy.cs" />
+    <Compile Include="Ranges\RangeStrategies\Iota\AIotaCancelableGeneratorStrateg%271y.cs" />
+    <Compile Include="Ranges\RangeStrategies\Iota\AIotaGeneratorStrategy%271.cs" />
+    <Compile Include="Ranges\RangeStrategies\Iota\IotaCancelableGeneratorStrategy%271.cs" />
+    <Compile Include="Ranges\RangeStrategies\Iota\IotaCancelableSimpleGeneratorStrategy%271.cs" />
+    <Compile Include="Ranges\RangeStrategies\Iota\IotaGeneratorStrategy%271.cs" />
     <Compile Include="Ranges\RangeStrategies\Iota\IotaIntsFromToStrategy.cs" />
-    <Compile Include="Ranges\RangeStrategies\Iota\IotaSimpleGeneratorStrategy.cs" />
-    <Compile Include="Ranges\RangeStrategies\Iota\IotaStartValueCancelableGeneratorStrategy.cs" />
-    <Compile Include="Ranges\RangeStrategies\Iota\IotaStartValueGeneratorStrategy.cs" />
-    <Compile Include="Ranges\RangeStrategies\Iota\IotaStartValueSimpleGeneratorStrategy.cs" />
-    <Compile Include="Ranges\RangeStrategies\IRangeStrategy.cs" />
+    <Compile Include="Ranges\RangeStrategies\Iota\IotaSimpleGeneratorStrategy%271.cs" />
+    <Compile Include="Ranges\RangeStrategies\Iota\IotaStartValueCancelableGeneratorStrategy%271.cs" />
+    <Compile Include="Ranges\RangeStrategies\Iota\IotaStartValueGeneratorStrategy%271.cs" />
+    <Compile Include="Ranges\RangeStrategies\Iota\IotaStartValueSimpleGeneratorStrategy%271.cs" />
+    <Compile Include="Ranges\RangeStrategies\IRangeStrategy%271.cs" />
     <Compile Include="Ranges\Extensions\Range_Ints.cs" />
     <Compile Include="Ranges\Extensions\Range_Iota.cs" />
-    <Compile Include="Ranges\RangeStrategies\RangeFilter.cs" />
-    <Compile Include="Ranges\RangeStrategies\RangeTransform.cs" />
+    <Compile Include="Ranges\RangeStrategies\RangeFilter%271.cs" />
+    <Compile Include="Ranges\RangeStrategies\RangeTransform%271.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
