--- a/Source/Tests/RangeIt.Tests/RangeIt.Tests.csproj
+++ b/Source/Tests/RangeIt.Tests/RangeIt.Tests.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Iterators\Iterator%272_Tests.cs" />
     <Compile Include="Iterators\IteratorExtensions_Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Ranges\Range_Functions_Tests.cs" />
     <Compile Include="Ranges\Range_Operations_Tests.cs" />
     <Compile Include="Traits\CategoryAttribute.cs" />
     <Compile Include="Ranges\Range_Ints_Tests.cs" />
